# onsets-and-frames

./: infer.py  preprocess_maestro.py  pyproject.toml  requirements.txt  train.py
modules/: audio.py  constants.py  dataset.py  decoding.py  evaluate.py  midi.py  models.py  training.py  utils.py
